--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -686,6 +686,69 @@ section {
 }
 
 /*--------------------------------------------------------------
+# Search Section
+--------------------------------------------------------------*/
+
+.toggle-sidebar-btn {
+  font-size: 32px;
+  padding-left: 10px;
+  cursor: pointer;
+  color: #012970;
+}
+
+.search-bar {
+  min-width: 360px;
+  padding: 0 20px;
+}
+
+.search-form {
+  width: 100%;
+}
+
+.search-form input {
+  border: 0;
+  font-size: 14px;
+  color: #012970;
+  border: 1px solid rgba(1, 41, 112, 0.2);
+  padding: 7px 38px 7px 8px;
+  border-radius: 3px;
+  transition: 0.3s;
+  width: 100%;
+}
+
+.search-form input:focus,
+.search-form input:hover {
+  outline: none;
+  box-shadow: 0 0 10px 0 rgba(1, 41, 112, 0.15);
+  border: 1px solid rgba(1, 41, 112, 0.3);
+}
+
+.search-form button {
+  border: 0;
+  padding: 0;
+  margin-left: -30px;
+  background: none;
+}
+
+.search-form button i {
+  color: #012970;
+}
+
+.filter{
+  margin: 30px 0px 30px 0px;
+
+  
+}
+
+.filter .judul{
+  padding: 5px 10px 5px 10px;
+  background: rgb(27,68,156);
+  background: linear-gradient(180deg, rgba(27,68,156,1) 36%, rgba(0,132,206,1) 70%);
+  color:#fff ;
+  border-radius: 5px;
+}
+
+/*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
 .hero {
